--- a/About_Me.html
+++ b/About_Me.html
@@ -9,6 +9,7 @@
       background: #232328;
       box-shadow: 0px 5px 0px 0px rgba(153, 51, 153, 1);
       padding-inline-start: 0px;
+      margin-top: 10px;
       font-size: 20px;
     }
 
@@ -29,8 +30,11 @@
 
     #logo {
       color: #ffcc00;
-      display: inline-block;
-      padding-left: 20px;
+      font-size: 32px;
+      position: absolute;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      top: 45%;
     }
 
     .right_link {
@@ -56,21 +60,27 @@
       background-color: #232328;
       border: 1px solid #ffcc00;
       color: white;
-      font-size: 14px;
-      width: 25%;
+      font-size: 16px;
+      width: 50%;
       height: 500px;
       padding: 20px;
+      padding-right: 500px; 
       margin: 40px;
     }
 
     .cardTitle {
       font-weight: 200;
-      font-size: 24px;
+      font-size: 32px;
+      color: rgba(0, 153, 153, 1);
     }
 
     #about_cards {
       margin: auto;
-      display: inline;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
     }
 
     main {
@@ -82,6 +92,7 @@
     }
 
     body {
+      margin: 0px;
       background-image: url('Space_Background.jpg');
       background-size: 1920px 1080px;
     }
@@ -119,7 +130,7 @@
     <main>
       <section id="about_cards">
         <div class="Para_card" id="Card1">
-          <h2 class="cardTitle">Moon</h2>
+          <h2 class="cardTitle">Moon <i>(The Start)</i></h2>
           <hr>
           <p style="padding: 10px">
             Design and illustration for me started in the last moments of elementary school.
@@ -134,7 +145,7 @@
         </div>
 
         <div class="Para_card" id="Card2">
-          <h2 class="cardTitle">Rising</h2>
+          <h2 class="cardTitle">Rising <i>(The Journey Between)</i></h2>
           <hr>
           <p style="padding: 10px">
             After finishing my first year of middle school, I decided to take on an art class
@@ -152,7 +163,7 @@
         </div>
 
         <div class="Para_card" id="Card3">
-          <h2 class="cardTitle">Sun</h2>
+          <h2 class="cardTitle">Sun <i>(The Current Day)</i></h2>
           <hr>
           <p style="padding: 10px">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
