--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -9,6 +9,7 @@
       background: #232328;
       box-shadow: 0px 5px 0px 0px rgba(153, 51, 153, 1);
       padding-inline-start: 0px;
+      margin-top: 10px;
       font-size: 20px;
     }
 
@@ -30,8 +31,11 @@
 
     #logo {
       color: #ffcc00;
-      display: inline-block;
-      padding-left: 20px;
+      font-size: 32px;
+      position: absolute;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      top: 45%;
     }
 
     .right_link {
@@ -122,6 +126,7 @@
     }
 
     body {
+      margin: 0px;
       background-image: url('Space_Background.jpg');
       background-size: 1920px 1080px;
     }
