--- a/examples/flexbox.html
+++ b/examples/flexbox.html
@@ -10,7 +10,7 @@
         padding-top: 72px;
       }
       .flexChild {
-        background-color: lavender;
+        background-color: gold;
         border: 2px solid grey;
         border-radius: 4px;
         box-sizing: border-box;
