--- a/assignments/assignment13.html
+++ b/assignments/assignment13.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>HELLO WORLD</title>
+    <title>Assignment 13</title>
     <style>
       @media screen and (min-width: 200px) and (max-width: 899px) {
         .grid {
