--- a/assignments/assignment13.html
+++ b/assignments/assignment13.html
@@ -64,7 +64,7 @@
           grid-area: img;
         }
 
-        #virgo {
+        #Pisces {
           grid-area: img2;
         }
 
@@ -146,7 +146,7 @@
           margin-left: 100px;
         }
 
-        #virgo {
+        #Pisces {
           grid-area: img2;
           margin-bottom: 50px;
           margin-right: 100px;
@@ -208,8 +208,8 @@
       <div id="leo">
         <img src="../images/Leo.jpg" alt="Leo">
       </div>
-      <div id="virgo">
-        <img src="../images/Virgo.jpg" alt="Virgo">
+      <div id="Pisces">
+        <img src="../images/Pisces.jpg" alt="Pisces">
       </div>
       <div class="footer">All Rights Reserved @_gemini.artworks</div>
     </div>
